@@ -225,7 +225,7 @@ public final class DockerGenerator implements Generator {
                   - CLUSTER_PEERS=%s
                   - MANAGEMENT_PORT=%d
                   - CLUSTER_PORT=%d
-                  - JAVA_OPTS=-Xmx%s -XX:+Use%s -XX:+UseCompactObjectHeaders
+                  - JAVA_OPTS=-Xmx%s -XX:+Use%s
                 ports:
                   - "%d:%d"
                   - "%d:%d"
